build(deps-dev): Bump eslint-plugin-n from 16.6.2 to 17.9.0 (#1843)
* build(deps-dev): Bump eslint-plugin-n from 16.6.2 to 17.9.0

Bumps [eslint-plugin-n](https://github.com/eslint-community/eslint-plugin-n) from 16.6.2 to 17.9.0.
- [Release notes](https://github.com/eslint-community/eslint-plugin-n/releases)
- [Changelog](https://github.com/eslint-community/eslint-plugin-n/blob/master/CHANGELOG.md)
- [Commits](https://github.com/eslint-community/eslint-plugin-n/compare/16.6.2...v17.9.0)

---
updated-dependencies:
- dependency-name: eslint-plugin-n
  dependency-type: direct:development
  update-type: version-update:semver-major
...

Signed-off-by: dependabot[bot] <support@github.com>

* bump deps

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Felix <188768+fb55@users.noreply.github.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -74,6 +74,7 @@
                 ],
                 "@typescript-eslint/consistent-type-exports": 2,
 
+                "n/no-missing-import": 0,
                 "n/no-unsupported-features/es-syntax": 0
             }
         }
