--- a/.github/workflows/nodejs-test.yml
+++ b/.github/workflows/nodejs-test.yml
@@ -38,9 +38,9 @@ jobs:
             fail-fast: false
             matrix:
                 node:
-                    - 14
-                    - 16
                     - 18
+                    - 20
+                    - 22
                     - lts/*
 
         steps:
@@ -53,12 +53,12 @@ jobs:
             - run: npm ci
             - run: npm run build --if-present
 
-            - name: Run Jest
-              run: npm run test:jest
+            - name: Run tests
+              run: npm run test:vi
               if: matrix.node != env.NODE_COV
 
-            - name: Run Jest with coverage
-              run: npm run test:jest -- --coverage
+            - name: Run tests with coverage
+              run: npm run test:vi -- --coverage
               if: matrix.node == env.NODE_COV
 
             - name: Run Coveralls
