--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,11 @@
 {
     "compilerOptions": {
         /* Basic Options */
-        "target": "es5",
-        "module": "commonjs",
-        "lib": ["ES2015.Core"],
+        "target": "es2019",
+        "module": "nodenext",
         "declaration": true,
         "declarationMap": true,
         "sourceMap": true,
-        "outDir": "lib",
 
         /* Strict Type-Checking Options */
         "strict": true,
@@ -25,14 +23,6 @@
 
         /* Module Resolution Options */
         "esModuleInterop": true,
-        "moduleResolution": "node",
         "resolveJsonModule": true
-    },
-    "include": ["src"],
-    "exclude": [
-        "**/*.spec.ts",
-        "**/__fixtures__/*",
-        "**/__tests__/*",
-        "**/__snapshots__/*"
-    ]
+    }
 }
