--- a/package.json
+++ b/package.json
@@ -1,17 +1,7 @@
 {
     "name": "htmlparser2",
-    "description": "Fast & forgiving HTML/XML parser",
     "version": "9.1.0",
-    "author": "Felix Boehm <me@feedic.com>",
-    "funding": [
-        "https://github.com/fb55/htmlparser2?sponsor=1",
-        {
-            "type": "github",
-            "url": "https://github.com/sponsors/fb55"
-        }
-    ],
-    "license": "MIT",
-    "sideEffects": false,
+    "description": "Fast & forgiving HTML/XML parser",
     "keywords": [
         "html",
         "parser",
@@ -26,39 +16,65 @@
         "type": "git",
         "url": "git://github.com/fb55/htmlparser2.git"
     },
-    "directories": {
-        "lib": "lib/"
-    },
-    "main": "lib/index.js",
-    "types": "lib/index.d.ts",
-    "module": "lib/esm/index.js",
+    "funding": [
+        "https://github.com/fb55/htmlparser2?sponsor=1",
+        {
+            "type": "github",
+            "url": "https://github.com/sponsors/fb55"
+        }
+    ],
+    "license": "MIT",
+    "author": "Felix Boehm <me@feedic.com>",
+    "sideEffects": false,
+    "type": "module",
     "exports": {
         ".": {
-            "require": "./lib/index.js",
-            "import": "./lib/esm/index.js"
+            "import": {
+                "source": "./src/index.ts",
+                "types": "./dist/esm/index.d.ts",
+                "default": "./dist/esm/index.js"
+            },
+            "require": {
+                "source": "./src/index.ts",
+                "types": "./dist/commonjs/index.d.ts",
+                "default": "./dist/commonjs/index.js"
+            }
         },
-        "./lib/WritableStream": {
-            "require": "./lib/WritableStream.js",
-            "import": "./lib/esm/WritableStream.js"
+        "./dist/WritableStream": {
+            "import": {
+                "source": "./src/WritableStream.ts",
+                "types": "./dist/esm/WritableStream.d.ts",
+                "default": "./dist/esm/WritableStream.js"
+            },
+            "require": {
+                "source": "./src/WritableStream.ts",
+                "types": "./dist/commonjs/WritableStream.d.ts",
+                "default": "./dist/commonjs/WritableStream.js"
+            }
         }
     },
+    "main": "./dist/commonjs/index.js",
+    "types": "./dist/commonjs/index.d.ts",
     "files": [
-        "lib/**/*"
+        "dist",
+        "src"
     ],
     "scripts": {
-        "test": "npm run test:jest && npm run lint",
-        "test:jest": "jest",
-        "lint": "npm run lint:es && npm run lint:prettier",
-        "lint:es": "eslint src",
-        "lint:prettier": "npm run format:prettier:raw -- --check",
+        "build": "tshy",
         "format": "npm run format:es && npm run format:prettier",
         "format:es": "npm run lint:es -- --fix",
         "format:prettier": "npm run format:prettier:raw -- --write",
         "format:prettier:raw": "prettier '**/*.{ts,md,json,yml}'",
-        "build": "npm run build:cjs && npm run build:esm",
-        "build:cjs": "tsc --sourceRoot https://raw.githubusercontent.com/fb55/htmlparser2/$(git rev-parse HEAD)/src/",
-        "build:esm": "npm run build:cjs -- --module esnext --target es2019 --outDir lib/esm && echo '{\"type\":\"module\"}' > lib/esm/package.json",
-        "prepare": "npm run build"
+        "lint": "npm run lint:es && npm run lint:ts && npm run lint:prettier",
+        "lint:es": "eslint src",
+        "lint:prettier": "npm run format:prettier:raw -- --check",
+        "lint:ts": "tsc --noEmit",
+        "prepare": "npm run build",
+        "test": "npm run test:vi && npm run lint",
+        "test:vi": "vitest run"
+    },
+    "prettier": {
+        "tabWidth": 4
     },
     "dependencies": {
         "domelementtype": "^2.3.0",
@@ -67,31 +83,29 @@
         "entities": "^4.5.0"
     },
     "devDependencies": {
-        "@types/jest": "^29.5.12",
         "@types/node": "^20.14.9",
         "@typescript-eslint/eslint-plugin": "^7.14.1",
         "@typescript-eslint/parser": "^7.14.1",
+        "@vitest/coverage-v8": "^1.6.0",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-n": "^17.9.0",
         "eslint-plugin-unicorn": "^53.0.0",
-        "jest": "^29.7.0",
         "prettier": "^3.3.2",
-        "ts-jest": "^29.1.5",
-        "typescript": "^5.5.2"
+        "tshy": "^1.16.2",
+        "typescript": "^5.5.2",
+        "vitest": "^1.6.0"
     },
-    "jest": {
-        "preset": "ts-jest",
-        "testEnvironment": "node",
-        "coverageProvider": "v8",
-        "moduleNameMapper": {
-            "^(.*)\\.js$": [
-                "$1",
-                "$1.js"
-            ]
+    "tshy": {
+        "exclude": [
+            "**/*.spec.ts",
+            "**/__fixtures__/*",
+            "**/__tests__/*",
+            "**/__snapshots__/*"
+        ],
+        "exports": {
+            ".": "./src/index.ts",
+            "./dist/WritableStream": "./src/WritableStream.ts"
         }
-    },
-    "prettier": {
-        "tabWidth": 4
     }
 }
