--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         "exactOptionalPropertyTypes": true,
         "forceConsistentCasingInFileNames": true,
         "isolatedModules": true,
+        "isolatedDeclarations": true,
         "noFallthroughCasesInSwitch": true,
         "noImplicitOverride": true,
         "noImplicitReturns": true,
